--- a/packages/firebase_auth/firebase_auth_platform_interface/pubspec.yaml
+++ b/packages/firebase_auth/firebase_auth_platform_interface/pubspec.yaml
@@ -24,10 +24,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.4.0
-  pigeon: ^11.0.1
+  pigeon: 11.0.1
 
   # NOTE: This is a temporary workaround for Flutter 3.13
   watcher: ^1.1.0
 
-dependency_overrides: 
+dependency_overrides:
   watcher: ^1.1.0
