fix(core, windows): allow user to override MSVC_RUNTIME_MODE (#11150)

--- a/packages/firebase_core/firebase_core/windows/CMakeLists.txt
+++ b/packages/firebase_core/firebase_core/windows/CMakeLists.txt
@@ -86,7 +86,10 @@ target_compile_definitions(${PLUGIN_NAME} PUBLIC FLUTTER_PLUGIN_IMPL)
 
 # Source include directories and library dependencies. Add any plugin-specific
 # dependencies here.
-set(MSVC_RUNTIME_MODE MD)
+if(NOT MSVC_RUNTIME_MODE)
+  set(MSVC_RUNTIME_MODE MD)
+endif()
+
 add_subdirectory(${FIREBASE_CPP_SDK_DIR} bin/ EXCLUDE_FROM_ALL)
 target_include_directories(${PLUGIN_NAME} INTERFACE
   "${FIREBASE_CPP_SDK_DIR}/include")
