feat(storage): move Storage to use Pigeon for platform channels (#11521)
* pigeon template setup

* make storage macOS running

* method channel implementation update

* android compilable

* android emulator upload succeed

* add more task listener

* Get event channel working

* pause iOS for now

* update message.dart async

* Implement more Storage for iOS functionality

* make ios e2e test build

* more e2e test fix

* make e2e test pass (android)

* android e2e test

* make storage iOS pass e2e

* Add license header

* code format

* Update unit test, remove ones that's not work with pigeon

* add symbolic link for macos files

* make pigeon generated compatible with both iOS and macOS

* fix for analyze check

* add missing analyze fix

* more touch

* address part of review comments, majorly android ones

* format changes

* addressing the iOS feedback

* update with cleanup

* address the analyze check

* add retry to flaky pause/resume test

* clean up the android task destroy logic

* need to address the flakiness of this specific task

* format

---------

Co-authored-by: Cynthia Jiang <cynthiajiang@google.com>
Co-authored-by: a-maurice <amaurice@google.com>

--- a/packages/firebase_storage/firebase_storage/example/pubspec.yaml
+++ b/packages/firebase_storage/firebase_storage/example/pubspec.yaml
@@ -9,7 +9,7 @@ dependencies:
   firebase_storage: ^11.3.1
   flutter:
     sdk: flutter
-  image_picker: ^0.8.7+4
+  image_picker: ^1.0.2
   image_picker_for_web: ^2.1.12
 
 flutter:
