--- a/packages/firebase_storage/firebase_storage_platform_interface/pubspec.yaml
+++ b/packages/firebase_storage/firebase_storage_platform_interface/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: '>=3.3.0'
 
 dependencies:
+  _flutterfire_internals: ^1.3.4
   collection: ^1.15.0
   firebase_core: ^2.19.0
   flutter:
@@ -20,3 +21,4 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.0
+  pigeon: ^9.2.5
