--- a/packages/cloud_firestore_odm/cloud_firestore_odm/example/pubspec.yaml
+++ b/packages/cloud_firestore_odm/cloud_firestore_odm/example/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.2
-  cloud_firestore_odm_generator: ^1.0.0-dev.71
+  cloud_firestore_odm_generator:
+    path: ../../cloud_firestore_odm_generator
   cloud_firestore_odm_generator_integration_test:
     path: ../../cloud_firestore_odm_generator/cloud_firestore_odm_generator_integration_test
   flutter_test:
