feat(storage, windows): Add windows support (#11617)
* pigeon template setup

* make storage macOS running

* method channel implementation update

* android compilable

* android emulator upload succeed

* add more task listener

* Get event channel working

* pause iOS for now

* first windows checkin

* update message.dart async

* compilable example

* add the c++ into pubspec

* cmake changes to test the mono cpp lib

* make windows event channel working

* Implement more Storage for iOS functionality

* sdk demo ready

* make ios e2e test build

* more e2e test fix

* update with pigeon/messages.dart change

* fix the error message

* make e2e test pass (android)

* android e2e test

* make storage iOS pass e2e

* Add license header

* code format

* Update unit test, remove ones that's not work with pigeon

* add symbolic link for macos files

* make pigeon generated compatible with both iOS and macOS

* fix for analyze check

* add missing analyze fix

* more touch

* get windows pass e2e tests

* more e2e fix

* address part of review comments, majorly android ones

* format changes

* addressing the iOS feedback

* update with cleanup

* address the analyze check

* update e2e test for windows

* fix a few e2e issue

* fix the get data return value

* to address some review comments

* remove the example auto generate test

* update pigeon version

* some tweak

* add comments for a sleep timing

* format cpp and objc files

* add header comments

* remove debug output

* remove dart debug output

* more format fix

* fix the analyze

---------

Co-authored-by: Cynthia Jiang <cynthiajiang@google.com>
Co-authored-by: a-maurice <amaurice@google.com>

--- a/packages/firebase_auth/firebase_auth/windows/CMakeLists.txt
+++ b/packages/firebase_auth/firebase_auth/windows/CMakeLists.txt
@@ -48,7 +48,7 @@ target_link_libraries(${PLUGIN_NAME} PRIVATE "${firebase_libs}")
 
 target_include_directories(${PLUGIN_NAME} INTERFACE
   "${CMAKE_CURRENT_SOURCE_DIR}/include")
-target_link_libraries(${PLUGIN_NAME} PRIVATE flutter flutter_wrapper_plugin)
+target_link_libraries(${PLUGIN_NAME} PUBLIC flutter flutter_wrapper_plugin)
 
 # List of absolute paths to libraries that should be bundled with the plugin.
 # This list could contain prebuilt libraries, or libraries created by an
