feat(auth, windows): add Windows support for Google Sign In (#11861)
* feat(auth, windows): add Windows support for Google Sign In

* format

--- a/packages/firebase_auth/firebase_auth/example/pubspec.yaml
+++ b/packages/firebase_auth/firebase_auth/example/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_signin_button: ^2.0.0
   google_sign_in: ^6.1.0
+  google_sign_in_dartio: ^0.2.2+1 # For Windows support
 
 dev_dependencies:
   http: ^0.13.3
