fix(firestore): allow `null` value to `isEqualsTo` & `isNotEqualsTo` in `where()` query (#11896)
* fix(firestore): allow `null` value to `isEqualsTo` `isNotEqualsTo` & `arrayContains` for `where()` queries

* test(firestore): allow `null` value to `isEqualsTo` `isNotEqualsTo` & `arrayContains` for `where()` queries

* chore: analyze and format issues

* refactor: cannot use `null` with `arrayContains` to query. doesn't work

* chore: fix typo

* feat: export the "where" sentinel value for usage in the ODM

* fix(firestore): revert named param types back to original

* feat: Support `whereField(isEqualTo: null)` and similar

* chore: Revert header removal

* chore: fix analyze

* chore: header again....

---------

Co-authored-by: Remi Rousselet <darky12s@gmail.com>

--- a/packages/cloud_firestore_odm/cloud_firestore_odm_generator/pubspec.yaml
+++ b/packages/cloud_firestore_odm/cloud_firestore_odm_generator/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   collection: ^1.15.0
   freezed_annotation: '>=1.0.0 <3.0.0'
   # Can be removed once this is fixed https://github.com/dart-lang/graphs/issues/86
-  graphs: '>=2.0.0 <2.3.0'
+  graphs: ^2.0.0
   json_annotation: ^4.8.1
   meta: ^1.8.0
   recase: ^4.0.0
