--- a/packages/firebase_auth/firebase_auth/example/pubspec.yaml
+++ b/packages/firebase_auth/firebase_auth/example/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_messaging: ^14.7.8
   flutter:
     sdk: flutter
+  flutter_facebook_auth: ^5.0.11
   flutter_signin_button: ^2.0.0
   google_sign_in: ^6.1.0
   google_sign_in_dartio: ^0.2.2+1 # For Windows support
