Initial windows support - migration to pigeon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flutterfire_workspace
-
 environment:
-  sdk: '>=2.18.0 <4.0.0'
-
+  sdk: ">=2.18.0 <4.0.0"
 dev_dependencies:
   melos: ^3.0.1
+version: 1.0.1+143
