--- a/packages/firebase_remote_config/firebase_remote_config/pubspec.yaml
+++ b/packages/firebase_remote_config/firebase_remote_config/pubspec.yaml
@@ -39,3 +39,5 @@ flutter:
         pluginClass: FLTFirebaseRemoteConfigPlugin
       web:
         default_package: firebase_remote_config_web
+      windows:
+        pluginClass: FirebaseRemoteConfigPluginCApi
