--- a/packages/firebase_core/firebase_core/pubspec.yaml
+++ b/packages/firebase_core/firebase_core/pubspec.yaml
@@ -25,6 +25,10 @@ dev_dependencies:
   mockito: ^5.0.0
   plugin_platform_interface: ^2.1.3
 
+dependency_overrides:
+  firebase_core_platform_interface:
+    path: D:\\proj\\flutterfire\\packages\\firebase_core\\firebase_core_platform_interface
+
 flutter:
   plugin:
     platforms:
