--- a/packages/firebase_remote_config/firebase_remote_config/android/build.gradle
+++ b/packages/firebase_remote_config/firebase_remote_config/android/build.gradle
@@ -65,6 +65,7 @@ android {
         implementation platform("com.google.firebase:firebase-bom:${getRootProjectExtOrCoreProperty("FirebaseSDKVersion", firebaseCoreProject)}")
         implementation 'com.google.firebase:firebase-config'
         implementation 'androidx.annotation:annotation:1.7.0'
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.10"
     }
 }
 
