--- a/packages/firebase_remote_config/firebase_remote_config/pubspec.yaml
+++ b/packages/firebase_remote_config/firebase_remote_config/pubspec.yaml
@@ -27,6 +27,14 @@ dev_dependencies:
   mockito: ^5.0.0
   plugin_platform_interface: ^2.1.3
 
+dependency_overrides:
+  firebase_remote_config_platform_interface:
+    path: D:\\proj\\flutterfire\\packages\\firebase_remote_config\\firebase_remote_config_platform_interface
+  firebase_core:
+    path: D:\\proj\\flutterfire\\packages\\firebase_core\\firebase_core
+  firebase_core_platform_interface:
+    path: D:\\proj\\flutterfire\\packages\\firebase_core\\firebase_core_platform_interface
+
 flutter:
   plugin:
     platforms:
