feat(auth, android): Play Games provider sign-in support (#12201)
Co-authored-by: Mike Diarmid <mike.diarmid@gmail.com>

--- a/packages/firebase_auth/firebase_auth/example/android/app/src/main/AndroidManifest.xml
+++ b/packages/firebase_auth/firebase_auth/example/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <meta-data
       android:name="com.facebook.sdk.ClientToken"
       android:value="@string/facebook_client_token" />
+    <meta-data android:name="com.google.android.gms.games.APP_ID"
+      android:value="@string/game_services_project_id"/>
     <activity
       android:name=".MainActivity"
       android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
