ci: update AVD to API 34 (#12293)
* ci: update AVD to API 34

* another

* test

* change into 1 step

* test

--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -78,25 +78,12 @@ jobs:
             ~/.android/avd/*
             ~/.android/adb*
           key: avd-ubuntu
-      - name: create AVD and generate snapshot for caching
+      - name: Start AVD then run E2E tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 30
-          arch: x86_64
+          api-level: 34
           target: google_apis
-          force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: true
-          script: echo "Generated AVD snapshot for caching."
-      - name: run E2E tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 30
           arch: x86_64
-          target: google_apis
-          force-avd-creation: false
-          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: true
           working-directory: ${{ matrix.working_directory }}
           script: |
             flutter test integration_test/e2e_test.dart --dart-define=CI=true -d emulator-5554
