--- a/packages/firebase_storage/firebase_storage_web/pubspec.yaml
+++ b/packages/firebase_storage/firebase_storage_web/pubspec.yaml
@@ -5,7 +5,7 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/firebas
 version: 3.6.22
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
@@ -21,6 +21,7 @@ dependencies:
   http: '>=0.13.0 <2.0.0'
   js: ^0.6.3
   meta: ^1.8.0
+  web: '>=0.3.0 <0.5.0'
 
 dev_dependencies:
   firebase_core_platform_interface: ^5.0.0
