--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -234,7 +234,7 @@ jobs:
             --dart-define=CI=true
 
   web:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     timeout-minutes: 15
     strategy:
       matrix:
@@ -278,12 +278,15 @@ jobs:
         # https://github.com/flutter/flutter/issues/66264
         run: |
           chromedriver --port=4444 --trace-buffer-size=100000 &
-          flutter drive \
-            --verbose-system-logs \
-            -d web-server \
-            --driver=test_driver/integration_test.dart \
-            --target=integration_test/e2e_test.dart \
-            --dart-define=CI=true
+          flutter drive --target=./integration_test/e2e_test.dart --driver=./test_driver/integration_test.dart -d chrome --dart-define=CI=true | tee output.log
+          # We have to check the output for failed tests matching the string "[E]"
+          output=$(<output.log)
+          if [[ "$output" =~ \[E\] ]]; then
+          # You will see "All tests passed." in the logs even when tests failed.
+          echo "All tests did not pass. Please check the logs for more information."
+          exit 1
+          fi
+        shell: bash
 
   windows:
     runs-on: windows-latest
