fix(firestore, web): Propagate `FirebaseException` properly, fix `mergeFields` bug, fix `bytesLoaded` different type under different conditions (#12334)

--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -237,6 +237,8 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 15
     strategy:
+      # Temp measure for testing web tests. Please remove as soon as e2e tests are stable.
+      fail-fast: false
       matrix:
         working_directory:
           ['tests', 'packages/cloud_firestore/cloud_firestore/example']
