ci: updates to improve e2e tests (#12343)

--- a/.github/workflows/all_plugins.yaml
+++ b/.github/workflows/all_plugins.yaml
@@ -86,7 +86,7 @@ jobs:
       - uses: Homebrew/actions/setup-homebrew@master
       - name: 'Install Tools'
         run: |
-          brew install python3
+          alias python=python3
           flutter pub global activate flutter_plugin_tools
           brew install swiftformat
           brew install clang-format
