--- a/packages/cloud_functions/cloud_functions_web/pubspec.yaml
+++ b/packages/cloud_functions/cloud_functions_web/pubspec.yaml
@@ -6,7 +6,7 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/cloud_f
 version: 4.6.16
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
@@ -18,6 +18,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   js: ^0.6.3
+  web: '>=0.3.0 <0.5.0'
 
 dev_dependencies:
   firebase_core_platform_interface: ^5.0.0
