--- a/packages/firebase_app_check/firebase_app_check_web/pubspec.yaml
+++ b/packages/firebase_app_check/firebase_app_check_web/pubspec.yaml
@@ -4,7 +4,7 @@ homepage: https://github.com/firebase/flutterfire/tree/master/packages/firebase_
 version: 0.1.0+19
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
@@ -17,6 +17,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   js: ^0.6.3
+  web: '>=0.3.0 <0.5.0'
 
 dev_dependencies:
   build_runner: ^2.3.3
