--- a/packages/cloud_functions/cloud_functions_web/pubspec.yaml
+++ b/packages/cloud_functions/cloud_functions_web/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   js: ^0.6.3
-  web: '>=0.3.0 <0.5.0'
+  web: ^0.5.1
 
 dev_dependencies:
   firebase_core_platform_interface: ^5.0.0
