--- a/packages/firebase_auth/firebase_auth_web/pubspec.yaml
+++ b/packages/firebase_auth/firebase_auth_web/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   http_parser: ^4.0.0
   js: ^0.6.3
   meta: ^1.8.0
-  web: '>=0.3.0 <0.5.0'
+  web: ^0.5.1
 
 dev_dependencies:
   flutter_test:
