--- a/packages/firebase_core/firebase_core_web/pubspec.yaml
+++ b/packages/firebase_core/firebase_core_web/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
     sdk: flutter
   js: ^0.6.3
   meta: ^1.8.0
-  web: '>=0.3.0 <0.5.0'
+  web: ^0.5.1
 
 dev_dependencies:
   flutter_test:
