--- a/packages/firebase_messaging/firebase_messaging_web/pubspec.yaml
+++ b/packages/firebase_messaging/firebase_messaging_web/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
     sdk: flutter
   js: ^0.6.3
   meta: ^1.8.0
-  web: '>=0.3.0 <0.5.0'
+  web: ^0.5.1
 
 dev_dependencies:
   firebase_core_platform_interface: ^5.0.0
