--- a/packages/firebase_storage/firebase_storage_web/pubspec.yaml
+++ b/packages/firebase_storage/firebase_storage_web/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   http: '>=0.13.0 <2.0.0'
   js: ^0.6.3
   meta: ^1.8.0
-  web: '>=0.3.0 <0.5.0'
+  web: ^0.5.1
 
 dev_dependencies:
   firebase_core_platform_interface: ^5.0.0
