chore: update bug report template (#12503)

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -58,7 +58,7 @@ body:
 
   - type: input
     attributes:
-      label: `firebase_core` version
+      label: Firebase Core version
       description: What version of `firebase_core` has this issue?
       placeholder: "2.27.0"
     validations:
