chore: small fix to template snippet sharing (#12507)

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -120,7 +120,13 @@ body:
       label: Flutter dependencies
       description: Seeing your dependencies can help us debug versioning issues.
       value: |
-        ```json
+         <!--- Look below for instructions on how to share your Flutter Dependencies. --->
+
+        <details>
+        <summary>Expand <code>Flutter dependencies</code> snippet</summary>
+        <br>
+
+        ```yaml
 
         Replace this line with the contents of your `flutter pub deps -- --style=compact`.
 
