--- a/packages/firebase_storage/firebase_storage/example/pubspec.yaml
+++ b/packages/firebase_storage/firebase_storage/example/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   image_picker: ^1.0.2
   image_picker_for_web: ^2.1.12
+  web: ^0.5.1
 
 flutter:
   uses-material-design: true
