--- a/packages/firebase_core/firebase_core/pubspec.yaml
+++ b/packages/firebase_core/firebase_core/pubspec.yaml
@@ -4,9 +4,12 @@ description: Flutter plugin for Firebase Core, enabling connecting to multiple
 homepage: https://firebase.google.com/docs/flutter/setup
 repository: https://github.com/firebase/flutterfire/tree/master/packages/firebase_core/firebase_core
 version: 2.30.0
+publish_to: https://dart.pkg.jetbrains.space/angpysha/p/main/todo-points-dart-private/
 
 false_secrets:
   - example/**
+  - firebase_cpp_sdk_windows/**
+  - windows/cmake-build-debug/extracted/firebase_cpp_sdk_windows/**
 
 environment:
   sdk: '>=2.18.0 <4.0.0'
@@ -25,9 +28,9 @@ dev_dependencies:
   mockito: ^5.0.0
   plugin_platform_interface: ^2.1.3
 
-dependency_overrides:
-  firebase_core_platform_interface:
-    path: D:\\proj\\flutterfire\\packages\\firebase_core\\firebase_core_platform_interface
+#dependency_overrides:
+#  firebase_core_platform_interface:
+#    path: D:\\proj\\flutterfire\\packages\\firebase_core\\firebase_core_platform_interface
 
 flutter:
   plugin:
