--- a/packages/firebase_remote_config/firebase_remote_config_platform_interface/pubspec.yaml
+++ b/packages/firebase_remote_config/firebase_remote_config_platform_interface/pubspec.yaml
@@ -5,6 +5,7 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/firebas
 # NOTE: We strongly prefer non-breaking changes, even at the expense of a
 # less-clean API. See https://flutter.dev/go/platform-interface-breaking-changes
 version: 2.0.0
+publish_to: https://dart.pkg.jetbrains.space/angpysha/p/main/todo-points-dart-private/
 
 environment:
   sdk: '>=2.18.0 <4.0.0'
@@ -13,6 +14,9 @@ environment:
 dependencies:
   _flutterfire_internals: ^1.3.30
   firebase_core: ^2.30.0
+#  firebase_core:
+#    hosted: https://dart.pkg.jetbrains.space/angpysha/p/main/todo-points-dart-private/
+#    version: ^2.30.0
   flutter:
     sdk: flutter
   meta: ^1.8.0
@@ -24,3 +28,8 @@ dev_dependencies:
     sdk: flutter
   mockito: ^5.0.0
   pigeon: ^16.0.0
+
+#dependency_overrides:
+#  firebase_core:
+#    hosted: https://dart.pkg.jetbrains.space/angpysha/p/main/todo-points-dart-private/
+#    version: ^2.30.0-remote-config
